packages/svelte/tests/validator/samples/rest-eachblock-binding-3/_config.js
import { test } from '../../test';

// TODO this likely works in the new world - remove this warning?
export default test({ skip: true });
