packages/svelte/tests/compiler-errors/samples/unexpected-end-of-input-c/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'unexpected-eof',
		message: 'Unexpected end of input',
		position: [1, 1]
	}
});
